name:                tokenizers-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/tokenizers-hs
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2023 Marco Zocca
category:            NLP
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Tokenizers
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
  extra-libraries:     libtokenizers

-- test-suite spec
--   default-language:    Haskell2010
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       LibSpec
--   build-depends:       base
--                      , tokenizers-hs
--                      , hspec
--   ghc-options:         -Wall
--                        -Wcompat

source-repository head
  type:     git
  location: https://github.com/ocramz/tokenizers-hs
